--- a/views/member_post.ejs
+++ b/views/member_post.ejs
@@ -4,35 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Member Posts</title>
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 <body>
-    <% if(isAuthenticated) { %>
-        <h1>Welcome <%= user.username %></h1>
-    <% } %>
-    <ul>
-        <% if(posts && posts.length > 0) { %>
-            <% posts.forEach(post => { %>
-                <li>Title: <%= post.post_title %></li>
-                <li>Content: <%= post.content %></li>
-                <% if(isAuthenticated) { %>
-                    <li>Author: <%= post.author %></li>
-                    <li><%= post.created_at %></li>
-                    <% if(userInfo && userInfo.admin){%>
-                        <li><form action="/delete-post" method="post">
-                            <input type="hidden" name="postId" value="<%= post.post_id %>">
-                            <button type="submit" onclick="return confirm('Delete this post?')">Delete</button>
-                        </form></li>
-                    <% } %>
-                <% } %>
-                <br>
-            <% }) %>
-        <% } else { %>
-            <p>no posts found</p>
+    <div id="home-page">
+        <%- include('header.ejs') %>
+        <div id="content">
+            <% if(isAuthenticated) { %>
+                <h1>Welcome <%= user.username %>!</h1>
             <% } %>
-    </ul>
-    <a href="/create-post">Create a Post</a>
-    <% if(!isAuthenticated) { %>
-        <a href="/log-in">Log in</a>
-    <% } %>
+            <% if(posts && posts.length > 0) { %>
+                <% posts.forEach(post => { %>
+                    <div id="post-card">
+                        <ul>
+                            <li id="post-title"><%= post.post_title %></li>
+                            <li id="post-content"><%= post.content %></li>
+                            <% if(isAuthenticated) { %>
+                                <li id="post-author">Author: <%= post.author %></li>
+                                <li id="post-created-at"><%= post.created_at %></li>
+                                <% if(userInfo && userInfo.admin){%>
+                                    <li><form action="/delete-post" method="post">
+                                        <input type="hidden" name="postId" value="<%= post.post_id %>">
+                                        <button type="submit" onclick="return confirm('Delete this post?')">Delete</button>
+                                    </form></li>
+                                <% } %>
+                            <% } %>
+                        </ul>
+                    </div>
+                    <br>
+                <% }) %>
+            <% } else { %>
+                <p>no posts found</p>
+            <% } %>
+            <div id="extra-buttons">
+                <% if(!isAuthenticated) { %>
+                    <button onclick="location.href='/log-in'">Log in</button>
+                <% } else { %>
+                    <button onclick="location.href='/create-post'">Create a Post</button>
+                <% } %>
+            </div>
+        </div>
+        <%- include('footer.ejs') %>
+    </div>
 </body>
 </html>
